--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,10 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 30vmin;
-  pointer-events: none;
-  padding: 25px;;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-sway infinite 4s linear;
-  }
-}
-
-.App-header {
   background-color: #ece9c1;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: rgb(0, 0, 0);
 }
 
-
-@keyframes App-logo-sway {
-  0% {transform: rotate(0deg);}
-  25% {transform: rotate(10deg);}
-  50% {transform: rotate(0deg);}
-  75% {transform: rotate(-10deg);}
+.Main {
+  padding-top: 100px;  
 }
+
