--- a/src/styles/MyProfile.module.css
+++ b/src/styles/MyProfile.module.css
@@ -1,11 +1,42 @@
-.EditProfileBtn{
-    text-decoration: none;
+.myCard {
+  padding: 50px 0 50px 0;
+  border-bottom: 1px solid #f0f1f9;
+  padding: 40px;
+
 }
 
-.ProfileImg{
-    height: 20vmin;
+.profileCard {
+  background-color: #CDEAFB;
+  padding: 10px;
+  border-radius: 20px;
+  border: 1px solid #dadadf;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+
 }
 
-.ProfileWrapper{
-    height: 100%;
+.EditProfileBtn {
+  background: #DE5C6E;
+  border-radius: 2px;
+  color: #ffffff;
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 10px;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  transition: 0.3s;
+
 }
+
+.EditProfileBtn:hover {
+  background: #ec5267;
+}
+
+
