--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,5 +1,7 @@
 .Footer {
     width: 100%;
+    position: fixed;
+    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
