--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -33,7 +33,7 @@
   background: #DE5C6E;
   border-radius: 2px;
   color: #ffffff;
-  padding: 10px;
+  padding: 15px;
   border: none;
   border-radius: 20px;
   cursor: pointer;
@@ -46,8 +46,7 @@
   text-transform: uppercase;
   transition: 0.3s;
   width: 50%;
-
-
+  margin: 10px;
 }
 
 .SignButton:hover {
