--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -65,7 +65,7 @@
   border-radius:  20px;
   margin: auto;
   margin-bottom: 20px;
-  width:  50%;
+  max-width:  700px;
   text-align: center;
   display: block;
 }
