--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -11,8 +11,6 @@
 }
 
 .LandingArea {
-  min-height: calc(100vh -  100px);
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,13 +36,13 @@
   border-radius: 20px;
   cursor: pointer;
   font-size: 16px;
-  margin: 20px 20px 40px 20px;
+  margin: 10px;
   line-height: 19px;
   text-align: center;
   letter-spacing: 0.2em;
   text-transform: uppercase;
   transition: 0.3s;
-  width: 50%;
+  width: 200px;
 
 }
 
@@ -72,4 +70,7 @@
 
 .ButtonContainer {
   margin-bottom:  60px;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
 }
