--- a/src/styles/MyProfile.module.css
+++ b/src/styles/MyProfile.module.css
@@ -2,22 +2,19 @@
   padding: 50px 0 50px 0;
   border-bottom: 1px solid #f0f1f9;
   padding: 40px;
-
 }
 
 .profileCard {
-  background-color: #CDEAFB;
+  background-color: #cdeafb;
   padding: 10px;
   border-radius: 20px;
   border: 1px solid #dadadf;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-
 }
 
 .EditProfileBtn {
-  background: #DE5C6E;
+  background: #de5c6e;
   border-radius: 2px;
   color: #ffffff;
   padding: 10px;
@@ -32,11 +29,8 @@
   letter-spacing: 0.2em;
   text-transform: uppercase;
   transition: 0.3s;
-
 }
 
 .EditProfileBtn:hover {
   background: #ec5267;
 }
-
-
