--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,10 +2,14 @@
   text-align: center;
   background-color: #FFDDCF;
   min-height: 100vh;
+  overflow: scroll;
 }
 
 .Main {
-  padding-top: 100px;  
+  min-height: calc(100vh - 131px);
+  position: relative;
+  top: 73px;
+
 }
 
 
