--- a/src/styles/ChatGptForm.module.css
+++ b/src/styles/ChatGptForm.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 100px;
 }
 
 
@@ -10,7 +11,6 @@
     padding: 10px;
     border-radius: 20px;
     border: 1px solid #dadadf;
-    box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     width: 100%;
 }
