--- a/src/styles/ChatGptForm.module.css
+++ b/src/styles/ChatGptForm.module.css
@@ -13,6 +13,7 @@
     border: 1px solid #dadadf;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     width: 100%;
+    margin-bottom: 100px;
 }
 
 .Input {
@@ -195,4 +196,35 @@
 
 .Response button:hover{
     background-color:#DE5C6E;
+}
+
+
+@media screen and (max-width: 600px) {
+    .Content {
+        margin-bottom: 0;
+    }
+    .Response {
+        width: 100%;
+    }
+
+    .FormGrp {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 5px 0;
+    }
+
+    .FormLabel {
+        width: 100%;
+        text-align: center;
+    }
+
+    .Input {
+        width: 100%;
+    }
+
+    .Button {
+        width: 100%;
+    }
+
 }
