--- a/src/styles/MyProfile.module.css
+++ b/src/styles/MyProfile.module.css
@@ -11,6 +11,9 @@
   border: 1px solid #dadadf;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  width: 100%;
+  margin-bottom: 100px;
+  
 }
 
 .EditProfileBtn {
@@ -34,3 +37,13 @@
 .EditProfileBtn:hover {
   background: #ec5267;
 }
+
+.profileImg {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border:  solid 3px  #de5c6e;
+  margin: 0 auto;
+  display: block;
+}
+
