Update WorkInProgress module CSS for responsive design and changed image

--- a/src/styles/WorkInProgress.module.css
+++ b/src/styles/WorkInProgress.module.css
@@ -1,4 +1,12 @@
+
 .Wip {
     width: 400px;
     height: 400px;
+}
+
+@media screen and (max-width: 400px){
+    .Wip {
+        width: 50%;
+        height: 50%;
+    }
 }
