--- a/src/styles/WorkInProgress.module.css
+++ b/src/styles/WorkInProgress.module.css
@@ -2,6 +2,8 @@
 .Wip {
     width: 400px;
     height: 400px;
+    border: 4px solid yellow;
+    outline: 4px solid black;
 }
 
 @media screen and (max-width: 400px){
